// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextPiece render T  1`] = `
<div
  className="sc-gsDKAQ grLxMy"
>
  <div
    className="sc-dkPtRN fdlklY"
  >
    Next
  </div>
  <div
    className="sc-eCImPb hUESGB"
  >
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jRQBWg eVzpdC"
      color="0, 0, 0"
      type={0}
    />
  </div>
</div>
`;

exports[`NextPiece render test  1`] = `
<div
  className="sc-gsDKAQ grLxMy"
>
  <div
    className="sc-dkPtRN fdlklY"
  >
    Next
  </div>
  <div
    className="sc-eCImPb hUESGB"
  />
</div>
`;
